# Indonesian-Companies-Scraper

./: .gitignore
company_scraper/: README.md  crawl_once_reset_by_date.py  docker-compose.yml  proxies.txt  pyproject.toml
company_scraper/company_scraper/: items.py  middlewares.py  models.py  mongo.py  search_terms.txt  settings.py  skip_terms.txt
company_scraper/company_scraper/spiders/: example.py  indonesian.py
