[tool.poetry]
name = "company-scraper"
version = "0.1.0"
description = ""
authors = ["Joshua Westphal da Silva <joshuasilva333@gmail.com>"]
readme = "README.md"
packages = [{include = "company_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
